--- a/devel/pom.xml
+++ b/devel/pom.xml
@@ -25,7 +25,7 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.semanticcms</groupId><artifactId>semanticcms-parent</artifactId><version>1.18.0-POST-SNAPSHOT</version>
+    <groupId>com.semanticcms</groupId><artifactId>semanticcms-parent</artifactId><version>1.19.0-SNAPSHOT</version>
     <relativePath>../../../parent/pom.xml</relativePath>
   </parent>
 
@@ -33,7 +33,6 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
   <packaging>bundle</packaging>
 
   <properties>
-    <project.build.outputTimestamp>2023-03-13T21:23:58Z</project.build.outputTimestamp>
     <module.name>com.semanticcms.core.servlet.devel</module.name>
     <!-- SonarQube -->
     <sonar.projectKey>${project.groupId}:${project.artifactId}:1.x</sonar.projectKey>
