Using packaging=jar instead of packaging=bundle for all jar projects.
OSGI manifest entries are still added, however.

This change is required since maven-bundle-plugin has been adding entries with a constant and hard-coded timestamp of 1980-02-01.

--- a/devel/pom.xml
+++ b/devel/pom.xml
@@ -30,7 +30,7 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
   </parent>
 
   <groupId>com.semanticcms</groupId><artifactId>semanticcms-core-servlet-devel</artifactId><version>1.18.4-POST-SNAPSHOT</version>
-  <packaging>bundle</packaging>
+  <packaging>jar</packaging>
 
   <properties>
     <module.name>com.semanticcms.core.servlet.devel</module.name>
