--- a/book/pom.xml
+++ b/book/pom.xml
@@ -41,6 +41,9 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
     <documented.artifactId>semanticcms-core-servlet</documented.artifactId>
     <documented.name>SemanticCMS Core Servlet</documented.name>
     <documented.description>Java API for modeling web page content and relationships in a Servlet environment.</documented.description>
+    <javadoc.breadcrumbs><![CDATA[<a target="${javadoc.target}" href="https://semanticcms.com/">SemanticCMS</a>
+/ <a target="${javadoc.target}" href="https://semanticcms.com/core/">Core</a>
+/ <a target="${javadoc.target}" href="${project.url}">Servlet</a>]]></javadoc.breadcrumbs>
 
     <description.html><![CDATA[Documentation for <a target="${javadoc.target}" href="${project.url}">${documented.name}</a> in <a target="${javadoc.target}" href="https://semanticcms.com/">SemanticCMS</a> format.]]></description.html>
     <!-- SonarQube -->
