--- a/pom.xml
+++ b/pom.xml
@@ -29,12 +29,12 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
     <relativePath>../../parent/pom.xml</relativePath>
   </parent>
 
-  <groupId>com.semanticcms</groupId><artifactId>semanticcms-core-servlet</artifactId><version>1.20.0</version>
+  <groupId>com.semanticcms</groupId><artifactId>semanticcms-core-servlet</artifactId><version>1.20.0-POST-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <properties>
     <!-- Must be set to ${git.commit.time} for snapshots or ISO 8601 timestamp for releases. -->
-    <project.build.outputTimestamp>2024-05-09T22:30:34Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>${git.commit.time}</project.build.outputTimestamp>
     <module.name>com.semanticcms.core.servlet</module.name>
     <javadoc.breadcrumbs><![CDATA[<a target="${javadoc.target}" href="https://semanticcms.com/">SemanticCMS</a>
 / <a target="${javadoc.target}" href="https://semanticcms.com/core/">Core</a>
@@ -76,7 +76,7 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
     <connection>scm:git:git://github.com/ao-apps/semanticcms-core-servlet.git</connection>
     <developerConnection>scm:git:git@github.com:ao-apps/semanticcms-core-servlet.git</developerConnection>
     <url>https://github.com/ao-apps/semanticcms-core-servlet</url>
-    <tag>semanticcms-core-servlet-1.20.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <issueManagement>
