--- a/book/pom.xml
+++ b/book/pom.xml
@@ -29,12 +29,12 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
     <relativePath>../../../parent/pom.xml</relativePath>
   </parent>
 
-  <groupId>com.semanticcms</groupId><artifactId>semanticcms-core-servlet-book</artifactId><version>1.20.0-SNAPSHOT</version>
+  <groupId>com.semanticcms</groupId><artifactId>semanticcms-core-servlet-book</artifactId><version>1.20.0</version>
   <packaging>jar</packaging>
 
   <properties>
     <!-- Must be set to ${git.commit.time} for snapshots or ISO 8601 timestamp for releases. -->
-    <project.build.outputTimestamp>${git.commit.time}</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2024-05-11T03:16:45Z</project.build.outputTimestamp>
     <module.name>com.semanticcms.core.servlet.book</module.name>
     <subproject.subpath>book/</subproject.subpath>
     <!-- These values are copied from the project being documented -->
@@ -82,7 +82,7 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
     <connection>scm:git:git://github.com/ao-apps/semanticcms-core-servlet.git</connection>
     <developerConnection>scm:git:git@github.com:ao-apps/semanticcms-core-servlet.git</developerConnection>
     <url>https://github.com/ao-apps/semanticcms-core-servlet</url>
-    <tag>HEAD</tag>
+    <tag>semanticcms-core-servlet-book-1.20.0</tag>
   </scm>
 
   <issueManagement>
