--- a/devel/pom.xml
+++ b/devel/pom.xml
@@ -29,7 +29,7 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
     <relativePath>../../../parent/pom.xml</relativePath>
   </parent>
 
-  <groupId>com.semanticcms</groupId><artifactId>semanticcms-core-servlet-devel</artifactId><version>1.20.0-POST-SNAPSHOT</version>
+  <groupId>com.semanticcms</groupId><artifactId>semanticcms-core-servlet-devel</artifactId><version>1.21.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <properties>
